--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,9 +3,59 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
-@import "partials/colors";
+ @import "compass/reset";
+ @import "susy";
+ @import "partials/colors";
 
-#place-holder-logo {
-	color: $primary;
-}
+ * {
+ 	border: 1px solid red !important;
+ 	box-sizing: border-box;
+ }
+
+ $susy: (
+ 	columns: 12,
+ 	gutters: .70,
+ 	gutter-position: split,
+ 	/*debug: (image: show)*/
+ 	);
+
+ #project-content {
+ 	@include container(1140px);
+
+ 	#project-header {
+ 		@include span(12 nest);
+
+ 		h1,
+ 		h2, {
+ 			@include span(8)
+ 		}
+ 	}
+
+ 	#project-grid {
+ 		> div {
+ 			@include span(12);
+ 			min-height: 350px;
+ 			margin-bottom: gutter();
+
+ 			@media (min-width: 768px) and (max-width: 1024px){
+ 				@include span(6);
+ 				/*margin-bottom: gutter();*/
+ 				&:nth-child(10n+1) {
+ 					@include span(12);
+ 				}
+ 			}
+
+ 			@media (min-width: 1025px) {
+ 				@include span(4);
+ 				/*margin-bottom: gutter();*/
+
+ 				&:nth-child(10n+1),
+ 				&:nth-child(10n+4),
+ 				&:nth-child(10n+5), {
+ 					@include span(8);
+ 				}
+ 			}
+ 		}	
+ 	}
+ }
+
