--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -67,69 +67,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 10, ../sass/screen.scss */
+/* line 1, ../sass/_base.scss */
 * {
   border: 1px solid red !important;
   box-sizing: border-box;
 }
 
-/*Susy config*/
-/*Header Navigation*/
-/* line 24, ../sass/screen.scss */
-nav {
-  max-width: 1140px;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-nav:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 27, ../sass/screen.scss */
-nav #nav-items {
-  width: 96.56863%;
-  float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
-  display: flex;
-  justify-content: space-between;
-}
-/* line 32, ../sass/screen.scss */
-nav #nav-items ul {
-  display: flex;
-}
-
-/*Footer Navigation*/
-/* line 39, ../sass/screen.scss */
-#footer-content {
-  max-width: 1140px;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-#footer-content:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 42, ../sass/screen.scss */
-#footer-content #footer-items {
-  width: 96.56863%;
-  float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
-  display: flex;
-  justify-content: space-between;
-}
-/* line 47, ../sass/screen.scss */
-#footer-content #footer-items div {
-  display: flex;
+/* line 6, ../sass/_base.scss */
+h1 {
+  color: #4F5E66;
 }
 
 /*Hompage Project Grid*/
-/* line 54, ../sass/screen.scss */
+/* line 9, ../sass/_layouts.scss */
 #project-content {
   max-width: 1140px;
   margin-left: auto;
@@ -141,12 +91,12 @@ nav #nav-items ul {
   display: block;
   clear: both;
 }
-/* line 57, ../sass/screen.scss */
+/* line 12, ../sass/_layouts.scss */
 #project-content #project-header {
   width: 100%;
   float: left;
 }
-/* line 60, ../sass/screen.scss */
+/* line 15, ../sass/_layouts.scss */
 #project-content #project-header h1,
 #project-content #project-header h2 {
   width: 63.23529%;
@@ -154,7 +104,7 @@ nav #nav-items ul {
   margin-left: 1.71569%;
   margin-right: 1.71569%;
 }
-/* line 67, ../sass/screen.scss */
+/* line 22, ../sass/_layouts.scss */
 #project-content #project-grid > div {
   width: 96.56863%;
   float: left;
@@ -164,7 +114,7 @@ nav #nav-items ul {
   margin-bottom: 1.71569%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  /* line 67, ../sass/screen.scss */
+  /* line 22, ../sass/_layouts.scss */
   #project-content #project-grid > div {
     width: 46.56863%;
     float: left;
@@ -172,7 +122,7 @@ nav #nav-items ul {
     margin-right: 1.71569%;
     /*margin-bottom: gutter();*/
   }
-  /* line 75, ../sass/screen.scss */
+  /* line 30, ../sass/_layouts.scss */
   #project-content #project-grid > div:nth-child(10n+1) {
     width: 96.56863%;
     float: left;
@@ -181,7 +131,7 @@ nav #nav-items ul {
   }
 }
 @media (min-width: 1025px) {
-  /* line 67, ../sass/screen.scss */
+  /* line 22, ../sass/_layouts.scss */
   #project-content #project-grid > div {
     width: 29.90196%;
     float: left;
@@ -189,7 +139,7 @@ nav #nav-items ul {
     margin-right: 1.71569%;
     /*margin-bottom: gutter();*/
   }
-  /* line 84, ../sass/screen.scss */
+  /* line 39, ../sass/_layouts.scss */
   #project-content #project-grid > div:nth-child(10n+1), #project-content #project-grid > div:nth-child(10n+4), #project-content #project-grid > div:nth-child(10n+5) {
     width: 63.23529%;
     float: left;
@@ -199,7 +149,7 @@ nav #nav-items ul {
 }
 
 /*Project Page*/
-/* line 95, ../sass/screen.scss */
+/* line 50, ../sass/_layouts.scss */
 #project-content-container {
   max-width: 1140px;
   margin-left: auto;
@@ -211,24 +161,78 @@ nav #nav-items ul {
   display: block;
   clear: both;
 }
-/* line 98, ../sass/screen.scss */
+/* line 53, ../sass/_layouts.scss */
 #project-content-container #breadcrumb-container {
   width: 96.56863%;
   float: left;
   margin-left: 1.71569%;
   margin-right: 1.71569%;
 }
-/* line 102, ../sass/screen.scss */
+/* line 57, ../sass/_layouts.scss */
 #project-content-container #image-container {
   width: 63.23529%;
   float: left;
   margin-left: 1.71569%;
   margin-right: 1.71569%;
 }
-/* line 106, ../sass/screen.scss */
+/* line 61, ../sass/_layouts.scss */
 #project-content-container #description-container {
   width: 29.90196%;
   float: right;
   margin-left: 1.71569%;
   margin-right: 1.71569%;
+}
+
+/*Header Navigation*/
+/* line 2, ../sass/_modules.scss */
+nav {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
+nav:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 5, ../sass/_modules.scss */
+nav #nav-items {
+  width: 96.56863%;
+  float: left;
+  margin-left: 1.71569%;
+  margin-right: 1.71569%;
+  display: flex;
+  justify-content: space-between;
+}
+/* line 10, ../sass/_modules.scss */
+nav #nav-items ul {
+  display: flex;
+}
+
+/*Footer Navigation*/
+/* line 17, ../sass/_modules.scss */
+#footer-content {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
+#footer-content:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 20, ../sass/_modules.scss */
+#footer-content #footer-items {
+  width: 96.56863%;
+  float: left;
+  margin-left: 1.71569%;
+  margin-right: 1.71569%;
+  display: flex;
+  justify-content: space-between;
+}
+/* line 25, ../sass/_modules.scss */
+#footer-content #footer-items div {
+  display: flex;
 }
