--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,33 @@
- * {
+* {
  	border: 1px solid red !important;
  	box-sizing: border-box;
- }
+}
+
+html {
+	font-size: 16px;
+}
 
 h1 {
 	color: $primary;
+	font-size: 2.625rem;
 }
 
+h2 {
+	color: $secondary;
+	font-size: 1.5rem;
+}
+
+h3 {
+	color: $primary;
+	font-size: 1.625rem;
+}
+
+h4 {
+	color: $tertiary;
+	font-size: 0.875rem;
+}
+
+p {
+	color: $secondary;
+	font-size: 1rem;
+}
