--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -1,64 +1,74 @@
-$susy: (
- 	columns: 12,
- 	gutters: .70,
- 	gutter-position: split,
- 	/*debug: (image: show)*/
- 	);
-
 /*Hompage Project Grid*/
- #project-content {
- 	@include container(1140px);
+$susy: (
+	columns: 12,
+	gutters: .70,
+	gutter-position: split,
+	/*debug: (image: show)*/
+	);
 
- 	#project-header {
- 		@include span(12 nest);
+#project-content {
+	@include container($max-width);
 
- 		h1,
- 		h2, {
- 			@include span(8);
- 		}
- 	}
+	#project-header {
+		@include span(12 nest);
 
- 	#project-grid {
- 		> div {
- 			@include span(12);
- 			min-height: 350px;
- 			margin-bottom: gutter();
-
- 			@media (min-width: 768px) and (max-width: 1024px){
- 				@include span(6);
- 				/*margin-bottom: gutter();*/
- 				&:nth-child(10n+1) {
- 					@include span(12);
- 				}
- 			}
-
- 			@media (min-width: 1025px) {
- 				@include span(4);
- 				/*margin-bottom: gutter();*/
-
- 				&:nth-child(10n+1),
- 				&:nth-child(10n+4),
- 				&:nth-child(10n+5), {
- 					@include span(8);
- 				}
- 			}
- 		}	
- 	}
- }
-
-  /*Project Page*/ 
- #project-content-container {
-	@include container(1140px);
-
-	#breadcrumb-container {
-		@include span(12);
+		h1,
+		h2, {
+			@include span(8);
+		}
 	}
 
-	#image-container {
-		@include span(8);
-	}
+	#project-grid {
+		> div {
+			@include span(12);
+			min-height: 350px;
+			margin-bottom: gutter();
 
-	#description-container {
-		@include span(4 last); 
-	} 	
- }
+			@media (min-width: 768px) and (max-width: 1024px){
+				@include span(6);
+				margin-bottom: gutter();
+				&:nth-child(10n+1) {
+					@include span(12);
+				}
+			}
+
+			@media (min-width: 1025px) {
+				@include span(4);
+				/*margin-bottom: gutter();*/
+
+				&:nth-child(10n+1),
+				&:nth-child(10n+4),
+				&:nth-child(10n+5), {
+					@include span(8);
+				}
+			}
+		}	
+	}
+}
+
+/*Project Page*/ 
+$project: (
+	columns: 12,
+	gutters: .70,
+	gutter-position: after,
+	/*debug: (image: show)*/
+	);
+
+@include with-layout($project) {
+	#project-content-container {
+
+		@include container($max-width);
+
+		#breadcrumb-container {
+			@include span(12);
+		}
+
+		#image-container {
+			@include span(8);
+		}
+
+		#description-container {
+			@include span(4 last); 
+		} 	
+	}
+}
