--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -67,6 +67,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+/*Colors*/
+/*Sizing*/
 /* line 1, ../sass/_base.scss */
 * {
   border: 1px solid red !important;
@@ -74,8 +76,38 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 6, ../sass/_base.scss */
+html {
+  font-size: 16px;
+}
+
+/* line 10, ../sass/_base.scss */
 h1 {
   color: #4F5E66;
+  font-size: 2.625rem;
+}
+
+/* line 15, ../sass/_base.scss */
+h2 {
+  color: #7893A1;
+  font-size: 1.5rem;
+}
+
+/* line 20, ../sass/_base.scss */
+h3 {
+  color: #4F5E66;
+  font-size: 1.625rem;
+}
+
+/* line 25, ../sass/_base.scss */
+h4 {
+  color: #9DA9B0;
+  font-size: 0.875rem;
+}
+
+/* line 30, ../sass/_base.scss */
+p {
+  color: #7893A1;
+  font-size: 1rem;
 }
 
 /*Hompage Project Grid*/
@@ -120,7 +152,7 @@ h1 {
     float: left;
     margin-left: 1.71569%;
     margin-right: 1.71569%;
-    /*margin-bottom: gutter();*/
+    margin-bottom: 1.71569%;
   }
   /* line 30, ../sass/_layouts.scss */
   #project-content #project-grid > div:nth-child(10n+1) {
@@ -149,7 +181,7 @@ h1 {
 }
 
 /*Project Page*/
-/* line 50, ../sass/_layouts.scss */
+/* line 58, ../sass/_layouts.scss */
 #project-content-container {
   max-width: 1140px;
   margin-left: auto;
@@ -161,29 +193,27 @@ h1 {
   display: block;
   clear: both;
 }
-/* line 53, ../sass/_layouts.scss */
+/* line 62, ../sass/_layouts.scss */
 #project-content-container #breadcrumb-container {
-  width: 96.56863%;
+  width: 100%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0;
+  margin-right: 0;
 }
-/* line 57, ../sass/_layouts.scss */
+/* line 66, ../sass/_layouts.scss */
 #project-content-container #image-container {
-  width: 63.23529%;
+  width: 65.48223%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-right: 3.5533%;
 }
-/* line 61, ../sass/_layouts.scss */
+/* line 70, ../sass/_layouts.scss */
 #project-content-container #description-container {
-  width: 29.90196%;
+  width: 30.96447%;
   float: right;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-right: 0;
 }
 
-/*Header Navigation*/
+/*Header*/
 /* line 2, ../sass/_modules.scss */
 nav {
   max-width: 1140px;
@@ -210,7 +240,7 @@ nav #nav-items ul {
   display: flex;
 }
 
-/*Footer Navigation*/
+/*Footer*/
 /* line 17, ../sass/_modules.scss */
 #footer-content {
   max-width: 1140px;
