--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,3 +6,11 @@ $accent: #4BC180;
 
 /*Sizing*/
 $max-width: 1140px;
+$card-height: 400px;
+$card-image-height: 265px;
+
+/*Fonts*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600,700');
+
+$montserrat: 'Montserrat', sans-serif;
+$open-sans: 'Open Sans', sans-serif;
