--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,6 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600,700");
 /* line 5, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -69,6 +70,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 /*Colors*/
 /*Sizing*/
+/*Fonts*/
 /* line 1, ../sass/_base.scss */
 * {
   border: 1px solid red !important;
@@ -78,33 +80,36 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 6, ../sass/_base.scss */
 html {
   font-size: 16px;
+  font-family: "Open Sans", sans-serif;
 }
 
-/* line 10, ../sass/_base.scss */
+/* line 11, ../sass/_base.scss */
 h1 {
+  font-family: "Montserrat", sans-serif;
   color: #4F5E66;
   font-size: 2.625rem;
 }
 
-/* line 15, ../sass/_base.scss */
+/* line 17, ../sass/_base.scss */
 h2 {
   color: #7893A1;
   font-size: 1.5rem;
 }
 
-/* line 20, ../sass/_base.scss */
+/* line 22, ../sass/_base.scss */
 h3 {
   color: #4F5E66;
   font-size: 1.625rem;
 }
 
-/* line 25, ../sass/_base.scss */
+/* line 27, ../sass/_base.scss */
 h4 {
   color: #9DA9B0;
   font-size: 0.875rem;
+  text-transform: uppercase;
 }
 
-/* line 30, ../sass/_base.scss */
+/* line 33, ../sass/_base.scss */
 p {
   color: #7893A1;
   font-size: 1rem;
@@ -124,13 +129,13 @@ p {
   clear: both;
 }
 /* line 12, ../sass/_layouts.scss */
-#project-content #project-header {
+#project-content .project-header {
   width: 100%;
   float: left;
 }
 /* line 15, ../sass/_layouts.scss */
-#project-content #project-header h1,
-#project-content #project-header h2 {
+#project-content .project-header .site-title,
+#project-content .project-header .site-byline {
   width: 63.23529%;
   float: left;
   margin-left: 1.71569%;
@@ -142,7 +147,7 @@ p {
   float: left;
   margin-left: 1.71569%;
   margin-right: 1.71569%;
-  min-height: 350px;
+  /*height: 350px;*/
   margin-bottom: 1.71569%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -227,7 +232,7 @@ nav:after {
   clear: both;
 }
 /* line 5, ../sass/_modules.scss */
-nav #nav-items {
+nav .nav-items {
   width: 96.56863%;
   float: left;
   margin-left: 1.71569%;
@@ -236,12 +241,17 @@ nav #nav-items {
   justify-content: space-between;
 }
 /* line 10, ../sass/_modules.scss */
-nav #nav-items ul {
+nav .nav-items ul {
   display: flex;
 }
 
+/* line 16, ../sass/_modules.scss */
+.nav-items {
+  padding: 3.25rem 0;
+}
+
 /*Footer*/
-/* line 17, ../sass/_modules.scss */
+/* line 21, ../sass/_modules.scss */
 #footer-content {
   max-width: 1140px;
   margin-left: auto;
@@ -253,7 +263,7 @@ nav #nav-items ul {
   display: block;
   clear: both;
 }
-/* line 20, ../sass/_modules.scss */
+/* line 24, ../sass/_modules.scss */
 #footer-content #footer-items {
   width: 96.56863%;
   float: left;
@@ -262,7 +272,45 @@ nav #nav-items ul {
   display: flex;
   justify-content: space-between;
 }
-/* line 25, ../sass/_modules.scss */
+/* line 29, ../sass/_modules.scss */
 #footer-content #footer-items div {
   display: flex;
+}
+
+/*Site Header*/
+/* line 36, ../sass/_modules.scss */
+.project-header {
+  margin: 8.571rem 0;
+}
+
+/* line 40, ../sass/_modules.scss */
+.site-title {
+  margin-bottom: 3.25rem;
+}
+
+/*Project Cards*/
+/* line 45, ../sass/_modules.scss */
+.project-card {
+  height: 400px;
+}
+
+/* line 49, ../sass/_modules.scss */
+.card-image {
+  background-image: url("../img/placeholder.jpg");
+  height: 265px;
+  background-repeat: no-repeat;
+}
+
+/* line 55, ../sass/_modules.scss */
+.card-content {
+  padding: 1rem 1.5rem 0 1.5rem;
+  height: 135px;
+}
+/* line 59, ../sass/_modules.scss */
+.card-content h4 {
+  margin-bottom: .25rem;
+}
+/* line 63, ../sass/_modules.scss */
+.card-content h3 {
+  margin-bottom: .5rem;
 }
