--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,7 +10,7 @@ $card-height: 400px;
 $card-image-height: 265px;
 
 /*Fonts*/
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400|Source+Sans+Pro:300,400,600,700');
 
-$montserrat: 'Montserrat', sans-serif;
-$open-sans: 'Open Sans', sans-serif;
+$headline-font: 'Montserrat', sans-serif;
+$body-font: 'Source Sans Pro', sans-serif;
