--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url("https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400|Source+Sans+Pro:300,400,600,700");
 /* line 5, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -80,7 +80,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 6, ../sass/_base.scss */
 html {
   font-size: 16px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 /* line 11, ../sass/_base.scss */
@@ -88,105 +88,127 @@ h1 {
   font-family: "Montserrat", sans-serif;
   color: #4F5E66;
   font-size: 2.625rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
-/* line 17, ../sass/_base.scss */
+/* line 19, ../sass/_base.scss */
 h2 {
   color: #7893A1;
   font-size: 1.5rem;
-}
-
-/* line 22, ../sass/_base.scss */
-h3 {
-  color: #4F5E66;
-  font-size: 1.625rem;
+  line-height: 2.375rem;
+  letter-spacing: .75px;
+  font-weight: 300;
 }
 
 /* line 27, ../sass/_base.scss */
+h3 {
+  color: #4F5E66;
+  font-size: 1.625rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: .25px;
+}
+
+/* line 35, ../sass/_base.scss */
 h4 {
   color: #9DA9B0;
   font-size: 0.875rem;
   text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
-/* line 33, ../sass/_base.scss */
+/* line 42, ../sass/_base.scss */
 p {
   color: #7893A1;
   font-size: 1rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+  letter-spacing: .25px;
 }
 
 /*Hompage Project Grid*/
 /* line 9, ../sass/_layouts.scss */
-#project-content {
+.project-content {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 6rem;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-#project-content:after {
+.project-content:after {
   content: " ";
   display: block;
   clear: both;
 }
-/* line 12, ../sass/_layouts.scss */
-#project-content .project-header {
+/* line 13, ../sass/_layouts.scss */
+.project-content .project-header {
   width: 100%;
   float: left;
 }
-/* line 15, ../sass/_layouts.scss */
-#project-content .project-header .site-title,
-#project-content .project-header .site-byline {
-  width: 63.23529%;
+/* line 17, ../sass/_layouts.scss */
+.project-content .project-header .site-title,
+.project-content .project-header .site-byline {
+  width: 98.07692%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
 }
-/* line 22, ../sass/_layouts.scss */
-#project-content #project-grid > div {
-  width: 96.56863%;
+@media (min-width: 768px) {
+  /* line 17, ../sass/_layouts.scss */
+  .project-content .project-header .site-title,
+  .project-content .project-header .site-byline {
+    width: 64.74359%;
+    float: left;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
+  }
+}
+/* line 27, ../sass/_layouts.scss */
+.project-content .project-card {
+  width: 98.07692%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
-  /*height: 350px;*/
-  margin-bottom: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
+  margin-bottom: 0.96154%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  /* line 22, ../sass/_layouts.scss */
-  #project-content #project-grid > div {
-    width: 46.56863%;
+  /* line 27, ../sass/_layouts.scss */
+  .project-content .project-card {
+    width: 48.07692%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
-    margin-bottom: 1.71569%;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
+    margin-bottom: 1.92308%;
   }
-  /* line 30, ../sass/_layouts.scss */
-  #project-content #project-grid > div:nth-child(10n+1) {
-    width: 96.56863%;
+  /* line 34, ../sass/_layouts.scss */
+  .project-content .project-card:nth-child(10n+1) {
+    width: 98.07692%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
   }
 }
 @media (min-width: 1025px) {
-  /* line 22, ../sass/_layouts.scss */
-  #project-content #project-grid > div {
-    width: 29.90196%;
+  /* line 27, ../sass/_layouts.scss */
+  .project-content .project-card {
+    width: 31.41026%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
-    /*margin-bottom: gutter();*/
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
+    margin-bottom: 2.88462%;
   }
-  /* line 39, ../sass/_layouts.scss */
-  #project-content #project-grid > div:nth-child(10n+1), #project-content #project-grid > div:nth-child(10n+4), #project-content #project-grid > div:nth-child(10n+5) {
-    width: 63.23529%;
+  /* line 43, ../sass/_layouts.scss */
+  .project-content .project-card:nth-child(10n+1), .project-content .project-card:nth-child(10n+4), .project-content .project-card:nth-child(10n+5) {
+    width: 64.74359%;
     float: left;
-    margin-left: 1.71569%;
-    margin-right: 1.71569%;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
   }
 }
 
 /*Project Page*/
-/* line 58, ../sass/_layouts.scss */
+/* line 62, ../sass/_layouts.scss */
 #project-content-container {
   max-width: 1140px;
   margin-left: auto;
@@ -198,20 +220,20 @@ p {
   display: block;
   clear: both;
 }
-/* line 62, ../sass/_layouts.scss */
+/* line 66, ../sass/_layouts.scss */
 #project-content-container #breadcrumb-container {
   width: 100%;
   float: left;
   margin-left: 0;
   margin-right: 0;
 }
-/* line 66, ../sass/_layouts.scss */
+/* line 70, ../sass/_layouts.scss */
 #project-content-container #image-container {
   width: 65.48223%;
   float: left;
   margin-right: 3.5533%;
 }
-/* line 70, ../sass/_layouts.scss */
+/* line 74, ../sass/_layouts.scss */
 #project-content-container #description-container {
   width: 30.96447%;
   float: right;
@@ -232,85 +254,107 @@ nav:after {
   clear: both;
 }
 /* line 5, ../sass/_modules.scss */
-nav .nav-items {
-  width: 96.56863%;
+nav .nav-container {
+  width: 98.07692%;
   float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
   display: flex;
   justify-content: space-between;
 }
 /* line 10, ../sass/_modules.scss */
-nav .nav-items ul {
+nav .nav-container ul {
   display: flex;
 }
 
 /* line 16, ../sass/_modules.scss */
-.nav-items {
+.nav-container {
   padding: 3.25rem 0;
 }
 
-/*Footer*/
-/* line 21, ../sass/_modules.scss */
-#footer-content {
-  max-width: 1140px;
-  margin-left: auto;
-  margin-right: auto;
+/* line 20, ../sass/_modules.scss */
+.nav-item {
+  margin-right: 3rem;
 }
-/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-#footer-content:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 24, ../sass/_modules.scss */
-#footer-content #footer-items {
-  width: 96.56863%;
-  float: left;
-  margin-left: 1.71569%;
-  margin-right: 1.71569%;
-  display: flex;
-  justify-content: space-between;
-}
-/* line 29, ../sass/_modules.scss */
-#footer-content #footer-items div {
-  display: flex;
+/* line 22, ../sass/_modules.scss */
+.nav-item:last-child {
+  margin-right: 0;
 }
 
 /*Site Header*/
-/* line 36, ../sass/_modules.scss */
+/* line 28, ../sass/_modules.scss */
 .project-header {
   margin: 8.571rem 0;
 }
 
-/* line 40, ../sass/_modules.scss */
+/* line 32, ../sass/_modules.scss */
 .site-title {
   margin-bottom: 3.25rem;
 }
 
 /*Project Cards*/
-/* line 45, ../sass/_modules.scss */
-.project-card {
-  height: 400px;
+@media (min-width: 1024px) {
+  /* line 37, ../sass/_modules.scss */
+  .project-card {
+    height: 400px;
+  }
 }
 
-/* line 49, ../sass/_modules.scss */
+/* line 43, ../sass/_modules.scss */
 .card-image {
   background-image: url("../img/placeholder.jpg");
   height: 265px;
   background-repeat: no-repeat;
 }
 
-/* line 55, ../sass/_modules.scss */
+/* line 49, ../sass/_modules.scss */
 .card-content {
-  padding: 1rem 1.5rem 0 1.5rem;
-  height: 135px;
+  padding: 1rem 1.5rem 1rem 1.5rem;
 }
-/* line 59, ../sass/_modules.scss */
+@media (min-width: 1024px) {
+  /* line 49, ../sass/_modules.scss */
+  .card-content {
+    height: 135px;
+  }
+}
+/* line 56, ../sass/_modules.scss */
 .card-content h4 {
   margin-bottom: .25rem;
 }
-/* line 63, ../sass/_modules.scss */
+/* line 60, ../sass/_modules.scss */
 .card-content h3 {
   margin-bottom: .5rem;
+}
+
+/*Footer*/
+/* line 66, ../sass/_modules.scss */
+.footer-content {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 2rem auto 8rem auto;
+}
+/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
+.footer-content:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 70, ../sass/_modules.scss */
+.footer-content .footer-items {
+  width: 98.07692%;
+  float: left;
+  margin-left: 0.96154%;
+  margin-right: 0.96154%;
+  display: flex;
+  justify-content: space-between;
+}
+/* line 76, ../sass/_modules.scss */
+.footer-content .footer-items div {
+  display: flex;
+}
+
+/* line 82, ../sass/_modules.scss */
+.email {
+  margin-right: 3rem;
 }
