--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,10 +1,10 @@
 * {
  	border: 1px solid red !important;
- 	box-sizing: border-box;
+ 	@include box-sizing(border-box);
 }
 
 html {
-	font-size: 16px;
+	font-size: $base-font-size;
 	font-family: $body-font;
 }
 
@@ -41,7 +41,7 @@ h4 {
 
 p {
 	color: $secondary;
-	font-size: 1rem;
+	font-size: $base-font-size;
 	line-height: 1.375rem;
 	font-weight: 400;
 	letter-spacing: .25px;
