--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -70,10 +70,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 /*Colors*/
 /*Sizing*/
+/*Media Queries*/
 /*Fonts*/
+/*Shadows*/
 /* line 1, ../sass/_base.scss */
 * {
   border: 1px solid red !important;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -121,7 +125,7 @@ h4 {
 /* line 42, ../sass/_base.scss */
 p {
   color: #7893A1;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.375rem;
   font-weight: 400;
   letter-spacing: .25px;
@@ -146,7 +150,7 @@ p {
   width: 100%;
   float: left;
 }
-/* line 17, ../sass/_layouts.scss */
+/* line 16, ../sass/_layouts.scss */
 .project-content .project-header .site-title,
 .project-content .project-header .site-byline {
   width: 98.07692%;
@@ -155,7 +159,7 @@ p {
   margin-right: 0.96154%;
 }
 @media (min-width: 768px) {
-  /* line 17, ../sass/_layouts.scss */
+  /* line 16, ../sass/_layouts.scss */
   .project-content .project-header .site-title,
   .project-content .project-header .site-byline {
     width: 64.74359%;
@@ -164,24 +168,23 @@ p {
     margin-right: 0.96154%;
   }
 }
-/* line 27, ../sass/_layouts.scss */
+/* line 26, ../sass/_layouts.scss */
 .project-content .project-card {
   width: 98.07692%;
   float: left;
   margin-left: 0.96154%;
   margin-right: 0.96154%;
-  margin-bottom: 0.96154%;
+  margin-bottom: 4.80769%;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
-  /* line 27, ../sass/_layouts.scss */
+@media (min-width: 768px) {
+  /* line 26, ../sass/_layouts.scss */
   .project-content .project-card {
     width: 48.07692%;
     float: left;
     margin-left: 0.96154%;
     margin-right: 0.96154%;
-    margin-bottom: 1.92308%;
   }
-  /* line 34, ../sass/_layouts.scss */
+  /* line 32, ../sass/_layouts.scss */
   .project-content .project-card:nth-child(10n+1) {
     width: 98.07692%;
     float: left;
@@ -189,8 +192,8 @@ p {
     margin-right: 0.96154%;
   }
 }
-@media (min-width: 1025px) {
-  /* line 27, ../sass/_layouts.scss */
+@media (min-width: 1024px) {
+  /* line 26, ../sass/_layouts.scss */
   .project-content .project-card {
     width: 31.41026%;
     float: left;
@@ -198,7 +201,7 @@ p {
     margin-right: 0.96154%;
     margin-bottom: 2.88462%;
   }
-  /* line 43, ../sass/_layouts.scss */
+  /* line 41, ../sass/_layouts.scss */
   .project-content .project-card:nth-child(10n+1), .project-content .project-card:nth-child(10n+4), .project-content .project-card:nth-child(10n+5) {
     width: 64.74359%;
     float: left;
@@ -208,36 +211,56 @@ p {
 }
 
 /*Project Page*/
-/* line 62, ../sass/_layouts.scss */
-#project-content-container {
+/* line 59, ../sass/_layouts.scss */
+.project-content-container {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-#project-content-container:after {
+.project-content-container:after {
   content: " ";
   display: block;
   clear: both;
 }
-/* line 66, ../sass/_layouts.scss */
-#project-content-container #breadcrumb-container {
-  width: 100%;
+/* line 63, ../sass/_layouts.scss */
+.project-content-container .breadcrumb-container {
+  width: 96.56863%;
   float: left;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 1.71569%;
+  margin-right: 1.71569%;
 }
-/* line 70, ../sass/_layouts.scss */
-#project-content-container #image-container {
-  width: 65.48223%;
+/* line 67, ../sass/_layouts.scss */
+.project-content-container .image-container {
+  width: 63.23529%;
   float: left;
-  margin-right: 3.5533%;
+  margin-left: 1.71569%;
+  margin-right: 1.71569%;
+}
+@media (max-width: 768px) {
+  /* line 67, ../sass/_layouts.scss */
+  .project-content-container .image-container {
+    width: 96.56863%;
+    float: left;
+    margin-left: 1.71569%;
+    margin-right: 1.71569%;
+  }
 }
 /* line 74, ../sass/_layouts.scss */
-#project-content-container #description-container {
-  width: 30.96447%;
+.project-content-container .description-container {
+  width: 29.90196%;
   float: right;
-  margin-right: 0;
+  margin-left: 1.71569%;
+  margin-right: 1.71569%;
+}
+@media (max-width: 768px) {
+  /* line 74, ../sass/_layouts.scss */
+  .project-content-container .description-container {
+    width: 96.56863%;
+    float: left;
+    margin-left: 1.71569%;
+    margin-right: 1.71569%;
+  }
 }
 
 /*Header*/
@@ -292,42 +315,80 @@ nav .nav-container ul {
   margin-bottom: 3.25rem;
 }
 
+/*Background*/
+/*.project-content {
+	&:before {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background-color: $background-color;
+	}
+}*/
 /*Project Cards*/
+/* line 51, ../sass/_modules.scss */
+.project-card {
+  cursor: pointer;
+  -moz-box-shadow: 0 30px 28px rgba(79, 94, 102, 0.2);
+  -webkit-box-shadow: 0 30px 28px rgba(79, 94, 102, 0.2);
+  box-shadow: 0 30px 28px rgba(79, 94, 102, 0.2);
+  -moz-transition-property: box-shadow;
+  -o-transition-property: box-shadow;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -moz-transition-timing-function: ease-in;
+  -o-transition-timing-function: ease-in;
+  -webkit-transition-timing-function: ease-in;
+  transition-timing-function: ease-in;
+}
+/* line 57, ../sass/_modules.scss */
+.project-card:hover {
+  -moz-box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
+  -webkit-box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
+  box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
+}
 @media (min-width: 1024px) {
-  /* line 37, ../sass/_modules.scss */
+  /* line 51, ../sass/_modules.scss */
   .project-card {
     height: 400px;
   }
 }
 
-/* line 43, ../sass/_modules.scss */
+/* line 65, ../sass/_modules.scss */
 .card-image {
-  background-image: url("../img/placeholder.jpg");
   height: 265px;
+  background-image: url("../img/placeholder.jpg");
   background-repeat: no-repeat;
 }
 
-/* line 49, ../sass/_modules.scss */
+/* line 71, ../sass/_modules.scss */
 .card-content {
   padding: 1rem 1.5rem 1rem 1.5rem;
 }
 @media (min-width: 1024px) {
-  /* line 49, ../sass/_modules.scss */
+  /* line 71, ../sass/_modules.scss */
   .card-content {
     height: 135px;
   }
 }
-/* line 56, ../sass/_modules.scss */
+/* line 78, ../sass/_modules.scss */
 .card-content h4 {
   margin-bottom: .25rem;
 }
-/* line 60, ../sass/_modules.scss */
+/* line 82, ../sass/_modules.scss */
 .card-content h3 {
   margin-bottom: .5rem;
 }
 
 /*Footer*/
-/* line 66, ../sass/_modules.scss */
+/* line 88, ../sass/_modules.scss */
 .footer-content {
   max-width: 1140px;
   margin-left: auto;
@@ -340,7 +401,7 @@ nav .nav-container ul {
   display: block;
   clear: both;
 }
-/* line 70, ../sass/_modules.scss */
+/* line 92, ../sass/_modules.scss */
 .footer-content .footer-items {
   width: 98.07692%;
   float: left;
@@ -349,12 +410,12 @@ nav .nav-container ul {
   display: flex;
   justify-content: space-between;
 }
-/* line 76, ../sass/_modules.scss */
+/* line 97, ../sass/_modules.scss */
 .footer-content .footer-items div {
   display: flex;
 }
 
-/* line 82, ../sass/_modules.scss */
+/* line 103, ../sass/_modules.scss */
 .email {
   margin-right: 3rem;
 }
