--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,30 +3,29 @@
  	@include box-sizing(border-box);
 }
 
-html {
-	font-size: $base-font-size;
+body {
 	font-family: $body-font;
 }
 
 h1 {
 	font-family: $headline-font;
 	color: $primary;
-	font-size: 2.625rem;
+	font-size: 42px;	
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
 
 h2 {
 	color: $secondary;
-	font-size: 1.5rem;
-	line-height: 2.375rem;
+	font-size: 24px;
+	line-height: 38px;
 	letter-spacing: .75px;
 	font-weight: 300;
 }
 
 h3 {
 	color: $primary;
-	font-size: 1.625rem;
+	font-size: 26px;
 	text-transform: uppercase;
 	font-weight: 600;
 	letter-spacing: .25px;
@@ -34,15 +33,15 @@ h3 {
 
 h4 {
 	color: $tertiary;
-	font-size: 0.875rem;
+	font-size: 14px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
 
 p {
 	color: $secondary;
-	font-size: $base-font-size;
-	line-height: 1.375rem;
+	font-size: 16px;
+	line-height: 21px;
 	font-weight: 400;
 	letter-spacing: .25px;
 }
