--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -1,4 +1,4 @@
-/*Header*/
+/* === TOP NAV === */
 nav {
 	@include container ($max-width);
 
@@ -6,48 +6,64 @@ nav {
 		@include span(12);
 		display: flex;
 		justify-content: space-between;
+		padding: 52px 0;
 
 		ul {
 			display: flex;
+
+			.nav-item {
+				margin-right: 48px;
+				&:last-child {
+					margin-right: 0;
+				}	
+			}
 		}
 	}
 }
 
-.nav-container {
-	padding: 3.25rem 0;
-}
+/* === FOOTER === */
+.footer-content {
+	@include container($max-width);
+	margin: 32px auto 128px auto;
+	
+	.footer-wrapper {
+		display: block;
 
-.nav-item {
-	margin-right: 3rem;
-	&:last-child {
-		margin-right: 0;
-	}	
-}
+		.footer-item {
+			margin-bottom: 16px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 
-/*Site Header*/
-.project-header {
-	margin: 8.571rem 0;
-}
+		@media (min-width: $medium-break) {
+			@include span(12);
+			display: flex;
+			justify-content: space-between;
 
-.site-title {
-	margin-bottom: 3.25rem;
-}
+			.contact-container {
+				display: flex;
 
-/*Background*/
-/*.project-content {
-	&:before {
-		content: "";
-		position: absolute;
-		z-index: -1;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		background-color: $background-color;
+				.email {
+					margin-right: 48px;
+				} 	
+			}
+		}
 	}
-}*/
+}
 
-/*Project Cards*/
+/* === BACKGROUND === */
+
+/* === SITE HEADER === */
+.project-header {
+	margin: 135px 0;
+	
+	.site-title {
+		margin-bottom: 52px;
+	}
+}
+
+/* === PROJECT CARDS === */
 .project-card {
 	cursor: pointer;
 	@include box-shadow($card-shadow);
@@ -58,49 +74,33 @@ nav {
 		@include box-shadow($hover-shadow);
 	}
 	@media (min-width: $large-break) {
-	height: $card-height;
-	}
-}
-
-.card-image {
-	height: $card-image-height;
-	@include background-image(url("../img/placeholder.jpg"));
-	background-repeat: no-repeat;	
-}
-
-.card-content {
-	padding: 1rem 1.5rem 1rem 1.5rem;
-
-	@media (min-width: $large-break) {
-	height: $card-height - $card-image-height;
+		height: $card-height;
 	}
 
-	h4 {
-		margin-bottom: .25rem;
+	.card-image {
+		height: $card-image-height;
+		@include background-image(url("../img/placeholder.jpg"));
+		background-repeat: no-repeat;	
 	}
 
-	h3 {
-		margin-bottom: .5rem;
-	}
-}
+	.card-content {
+		padding: 16px 24px 16px 24px;
 
-/*Footer*/
-.footer-content {
-	@include container($max-width);
-	margin: 2rem auto 8rem auto;
+		h4 {
+			margin-bottom: 4px;
+		}
 
-	.footer-items {
-		@include span(12);
-		display: flex;
-		justify-content: space-between;
+		h3 {
+			margin-bottom: 8px;
+		}
 
-		div {
-			display: flex;	
+		@media (min-width: $large-break) {
+			height: $card-height - $card-image-height;
 		}
 	}
 }
 
-.email {
-	margin-right: 3rem;
-} 
+
+
+
 
