--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -68,11 +68,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/*Colors*/
-/*Sizing*/
-/*Media Queries*/
-/*Fonts*/
-/*Shadows*/
+/* === COLORS === */
+/* === SIZING === */
+/* === MEDIA QUERIES === */
+/* === FONTS === */
+/* === SHADOWS === */
 /* line 1, ../sass/_base.scss */
 * {
   border: 1px solid red !important;
@@ -82,62 +82,61 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 6, ../sass/_base.scss */
-html {
-  font-size: 16px;
+body {
   font-family: "Source Sans Pro", sans-serif;
 }
 
-/* line 11, ../sass/_base.scss */
+/* line 10, ../sass/_base.scss */
 h1 {
   font-family: "Montserrat", sans-serif;
   color: #4F5E66;
-  font-size: 2.625rem;
+  font-size: 42px;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 
-/* line 19, ../sass/_base.scss */
+/* line 18, ../sass/_base.scss */
 h2 {
   color: #7893A1;
-  font-size: 1.5rem;
-  line-height: 2.375rem;
+  font-size: 24px;
+  line-height: 38px;
   letter-spacing: .75px;
   font-weight: 300;
 }
 
-/* line 27, ../sass/_base.scss */
+/* line 26, ../sass/_base.scss */
 h3 {
   color: #4F5E66;
-  font-size: 1.625rem;
+  font-size: 26px;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: .25px;
 }
 
-/* line 35, ../sass/_base.scss */
+/* line 34, ../sass/_base.scss */
 h4 {
   color: #9DA9B0;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
 
-/* line 42, ../sass/_base.scss */
+/* line 41, ../sass/_base.scss */
 p {
   color: #7893A1;
   font-size: 16px;
-  line-height: 1.375rem;
+  line-height: 21px;
   font-weight: 400;
   letter-spacing: .25px;
 }
 
-/*Hompage Project Grid*/
+/* === HOMEPAGE === */
 /* line 9, ../sass/_layouts.scss */
 .project-content {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 6rem;
+  margin-bottom: 96px;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
 .project-content:after {
@@ -210,7 +209,7 @@ p {
   }
 }
 
-/*Project Page*/
+/* === ARTICLE PAGE === */
 /* line 59, ../sass/_layouts.scss */
 .project-content-container {
   max-width: 1140px;
@@ -263,7 +262,7 @@ p {
   }
 }
 
-/*Header*/
+/* === TOP NAV === */
 /* line 2, ../sass/_modules.scss */
 nav {
   max-width: 1140px;
@@ -284,52 +283,80 @@ nav .nav-container {
   margin-right: 0.96154%;
   display: flex;
   justify-content: space-between;
+  padding: 52px 0;
 }
-/* line 10, ../sass/_modules.scss */
+/* line 11, ../sass/_modules.scss */
 nav .nav-container ul {
   display: flex;
 }
-
+/* line 14, ../sass/_modules.scss */
+nav .nav-container ul .nav-item {
+  margin-right: 48px;
+}
 /* line 16, ../sass/_modules.scss */
-.nav-container {
-  padding: 3.25rem 0;
-}
-
-/* line 20, ../sass/_modules.scss */
-.nav-item {
-  margin-right: 3rem;
-}
-/* line 22, ../sass/_modules.scss */
-.nav-item:last-child {
+nav .nav-container ul .nav-item:last-child {
   margin-right: 0;
 }
 
-/*Site Header*/
-/* line 28, ../sass/_modules.scss */
-.project-header {
-  margin: 8.571rem 0;
+/* === FOOTER === */
+/* line 25, ../sass/_modules.scss */
+.footer-content {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 32px auto 128px auto;
 }
-
+/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
+.footer-content:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 29, ../sass/_modules.scss */
+.footer-content .footer-wrapper {
+  display: block;
+}
 /* line 32, ../sass/_modules.scss */
-.site-title {
-  margin-bottom: 3.25rem;
+.footer-content .footer-wrapper .footer-item {
+  margin-bottom: 16px;
+}
+/* line 34, ../sass/_modules.scss */
+.footer-content .footer-wrapper .footer-item:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 768px) {
+  /* line 29, ../sass/_modules.scss */
+  .footer-content .footer-wrapper {
+    width: 98.07692%;
+    float: left;
+    margin-left: 0.96154%;
+    margin-right: 0.96154%;
+    display: flex;
+    justify-content: space-between;
+  }
+  /* line 44, ../sass/_modules.scss */
+  .footer-content .footer-wrapper .contact-container {
+    display: flex;
+  }
+  /* line 47, ../sass/_modules.scss */
+  .footer-content .footer-wrapper .contact-container .email {
+    margin-right: 48px;
+  }
 }
 
-/*Background*/
-/*.project-content {
-	&:before {
-		content: "";
-		position: absolute;
-		z-index: -1;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		background-color: $background-color;
-	}
-}*/
-/*Project Cards*/
-/* line 51, ../sass/_modules.scss */
+/* === BACKGROUND === */
+/* === SITE HEADER === */
+/* line 58, ../sass/_modules.scss */
+.project-header {
+  margin: 135px 0;
+}
+/* line 61, ../sass/_modules.scss */
+.project-header .site-title {
+  margin-bottom: 52px;
+}
+
+/* === PROJECT CARDS === */
+/* line 67, ../sass/_modules.scss */
 .project-card {
   cursor: pointer;
   -moz-box-shadow: 0 30px 28px rgba(79, 94, 102, 0.2);
@@ -348,74 +375,39 @@ nav .nav-container ul {
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
-/* line 57, ../sass/_modules.scss */
+/* line 73, ../sass/_modules.scss */
 .project-card:hover {
   -moz-box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
   -webkit-box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
   box-shadow: 0 40px 40px rgba(79, 94, 102, 0.15);
 }
 @media (min-width: 1024px) {
-  /* line 51, ../sass/_modules.scss */
+  /* line 67, ../sass/_modules.scss */
   .project-card {
     height: 400px;
   }
 }
-
-/* line 65, ../sass/_modules.scss */
-.card-image {
+/* line 80, ../sass/_modules.scss */
+.project-card .card-image {
   height: 265px;
   background-image: url("../img/placeholder.jpg");
   background-repeat: no-repeat;
 }
-
-/* line 71, ../sass/_modules.scss */
-.card-content {
-  padding: 1rem 1.5rem 1rem 1.5rem;
+/* line 86, ../sass/_modules.scss */
+.project-card .card-content {
+  padding: 16px 24px 16px 24px;
+}
+/* line 89, ../sass/_modules.scss */
+.project-card .card-content h4 {
+  margin-bottom: 4px;
+}
+/* line 93, ../sass/_modules.scss */
+.project-card .card-content h3 {
+  margin-bottom: 8px;
 }
 @media (min-width: 1024px) {
-  /* line 71, ../sass/_modules.scss */
-  .card-content {
+  /* line 86, ../sass/_modules.scss */
+  .project-card .card-content {
     height: 135px;
   }
-}
-/* line 78, ../sass/_modules.scss */
-.card-content h4 {
-  margin-bottom: .25rem;
-}
-/* line 82, ../sass/_modules.scss */
-.card-content h3 {
-  margin-bottom: .5rem;
-}
-
-/*Footer*/
-/* line 88, ../sass/_modules.scss */
-.footer-content {
-  max-width: 1140px;
-  margin-left: auto;
-  margin-right: auto;
-  margin: 2rem auto 8rem auto;
-}
-/* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
-.footer-content:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 92, ../sass/_modules.scss */
-.footer-content .footer-items {
-  width: 98.07692%;
-  float: left;
-  margin-left: 0.96154%;
-  margin-right: 0.96154%;
-  display: flex;
-  justify-content: space-between;
-}
-/* line 97, ../sass/_modules.scss */
-.footer-content .footer-items div {
-  display: flex;
-}
-
-/* line 103, ../sass/_modules.scss */
-.email {
-  margin-right: 3rem;
 }
