--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $primary: #4F5E66;
 $secondary: #7893A1;
 $tertiary: #9DA9B0;
 $accent: #4BC180;
-$background-color: #EDF1F5;
+$background-color: rgba(237, 241, 245, 1);
 
 /* === SIZING === */
 $max-width: 1140px;
