--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -41,6 +41,10 @@ nav {
 			display: flex;
 			justify-content: space-between;
 
+			.footer-item {
+				margin-bottom: 0;
+			}
+
 			.contact-container {
 				display: flex;
 
@@ -53,6 +57,53 @@ nav {
 }
 
 /* === BACKGROUND === */
+.background {
+	background: -webkit-linear-gradient(-75deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%);
+}
+
+/*.background {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}*/
+
+/*.background:before {
+		content: "";
+		background-color: $background-color;
+		height: 400px;
+		transform: skewY(-30deg);
+		position: absolute;
+		left: 0;
+		right: 0;
+		z-index: -1;
+		top: 200px;
+	}*/
+
+/*.background:after {
+		content: "";
+		background-color: $background-color;
+		height:1500px;
+		transform-origin: top right;
+		transform: skew(0deg, -30deg);
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: -1;
+	}*/
+
+/*	.background:after {
+		content: "";
+		background: red;
+		height: 40px;
+		transform: skewY(1deg);
+		position: absolute;
+		left: 0;
+		right: 0;
+		z-index: -1;
+		top: -30px;
+	} 
+*/
 
 /* === SITE HEADER === */
 .project-header {
@@ -66,6 +117,7 @@ nav {
 /* === PROJECT CARDS === */
 .project-card {
 	cursor: pointer;
+	background-color: #fff;
 	@include box-shadow($card-shadow);
 	@include transition-property(box-shadow);
 	@include transition-duration(.2s);
