fixed basurl issue with jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="{{ site.baseurl }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     <!-- Not sure if what is below is needed -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
