--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,21 +1,19 @@
 ---
-title: Project
+title: project
 layout: default
 ---
 
-	<div class="background">
-	
-	<section class="project-content-container">
+<section class="project-content-container">
 	
 	<div class="breadcrumb-container">
 	Breadcrumb Content
 	</div>
 
 	<div class="description-container">
-	<h4 class="project-description">Head of Design</h4>
 	<h3 class="project-title">
 	Avant
 	</h3>
+	<h4 class="project-description">Head of Design</h4>
 	<p>
 	This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done. This is where I talk about the work that I've done.
 	</p>
@@ -24,9 +22,3 @@ layout: default
 	<div class="image-container">
 		Image goes here
 	</div>
-
-	</section>
-
-	</div>
-
-
