--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -47,7 +47,7 @@ $susy: (
 		}	
 }
 
-/* === ARTICLE PAGE === */ 
+/* === PROJECT PAGE === */ 
 $project: (
 	columns: 12,
 	gutters: .70,
@@ -59,6 +59,14 @@ $project: (
 	.project-content-container {
 
 		@include container($max-width);
+
+		h4 {
+			margin-bottom: 4px;
+		}
+
+		h3 {
+			margin-bottom: 40px;
+		}
 
 		.breadcrumb-container {
 			@include span(12);
