--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -209,7 +209,7 @@ p {
   }
 }
 
-/* === ARTICLE PAGE === */
+/* === PROJECT PAGE === */
 /* line 59, ../sass/_layouts.scss */
 .project-content-container {
   max-width: 1140px;
@@ -223,13 +223,21 @@ p {
   clear: both;
 }
 /* line 63, ../sass/_layouts.scss */
+.project-content-container h4 {
+  margin-bottom: 4px;
+}
+/* line 67, ../sass/_layouts.scss */
+.project-content-container h3 {
+  margin-bottom: 40px;
+}
+/* line 71, ../sass/_layouts.scss */
 .project-content-container .breadcrumb-container {
   width: 96.56863%;
   float: left;
   margin-left: 1.71569%;
   margin-right: 1.71569%;
 }
-/* line 67, ../sass/_layouts.scss */
+/* line 75, ../sass/_layouts.scss */
 .project-content-container .image-container {
   width: 63.23529%;
   float: left;
@@ -237,7 +245,7 @@ p {
   margin-right: 1.71569%;
 }
 @media (max-width: 768px) {
-  /* line 67, ../sass/_layouts.scss */
+  /* line 75, ../sass/_layouts.scss */
   .project-content-container .image-container {
     width: 96.56863%;
     float: left;
@@ -245,7 +253,7 @@ p {
     margin-right: 1.71569%;
   }
 }
-/* line 74, ../sass/_layouts.scss */
+/* line 82, ../sass/_layouts.scss */
 .project-content-container .description-container {
   width: 29.90196%;
   float: right;
@@ -253,7 +261,7 @@ p {
   margin-right: 1.71569%;
 }
 @media (max-width: 768px) {
-  /* line 74, ../sass/_layouts.scss */
+  /* line 82, ../sass/_layouts.scss */
   .project-content-container .description-container {
     width: 96.56863%;
     float: left;
