--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,10 @@
     <link href="{{ site.baseurl }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     <!-- Not sure if what is below is needed -->
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="{{ site.baseurl }}/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
+
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
             <![endif]-->
@@ -26,12 +27,12 @@
             {{ content }}
             
             {% include footer.html %}
-              
+
         
             <!-- Begin Javascript -->
             <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-            <script src="js/main.js"></script>
+            <script src="{{ site.baseurl }}/js/main.js"></script>
 
             <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
             <script>
