--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -8,7 +8,7 @@ $susy: (
 
 .project-content {
 	@include container($max-width);
-	margin-bottom: 96px;
+	padding-bottom: 60px;
 
 	.project-header {
 		@include span(12 nest);
