fixed layout issues and other updates

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,8 @@ layout: default
 <section class="project-content-container">
 	
 	<div class="breadcrumb-container">
-	<a href="{{ site.baseurl }}/">Projects</a><div class="current-project">{{ page.title }}</div>
+	<p><a href="{{ site.baseurl }}/">All Projects</a></p>
+	<p class="current-project">// {{ page.title }}</p>
 	</div>
 
 	<div class="description-container">
