further updates and added dummy pages

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,8 +3,8 @@
         <div class="nav-container">
             <div id="place-holder-logo">Logo</div>  
             <ul>
-                <li class="nav-item">About</li>
-                <li class="nav-item">中文</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">中文</a></li>
             </ul>
         </div>
     </nav>
