--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,6 @@
 * {
- 	/*border: 1px solid red !important;*/
- 	@include box-sizing(border-box);
+	/*border: 1px solid red !important;*/
+	@include box-sizing(border-box);
 }
 
 body {
@@ -48,5 +48,11 @@ p {
 
 a {
 	text-decoration: none;
-	color: $accent;
+	@include transition-property(color);
+	@include transition-duration(.2s);
+	@include transition-timing-function(ease-in);
+
+	&:visted {
+		color: inherit;
+	}
 }
